Removed foursquare credentials

--- a/Data Science Capstone - Final Project.ipynb
+++ b/Data Science Capstone - Final Project.ipynb
@@ -370,8 +370,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client_id = '0VME3BPPWWDEM2VY0FTYKPQFF1ZRVV3UNYI0X4VXDDNG551X'\n",
-    "client_secret = 'GB5X2JPXR2I12BYV53IW1DVUDNFH2ZCAB1PQCX13PKDXUZ1Q'\n",
+    "client_id = 'REDACTED'\n",
+    "client_secret = 'REDACTED'\n",
     "version = '20200223'\n",
     "radius = 300\n",
     "limit = 5\n",
